smbios_cdir = $(includedir)/smbios_c
smbios_c_HEADERS = \
                src/include/smbios_c/cmos.h \
                src/include/smbios_c/memory.h \
                src/include/smbios_c/smbios.h \
                src/include/smbios_c/token.h \
                src/include/smbios_c/compat.h \
                src/include/smbios_c/types.h \
                src/include/smbios_c/smi.h \
                src/include/smbios_c/system_info.h

smbios_c_configdir = $(includedir)/smbios_c/config
smbios_c_config_HEADERS = \
                src/include/smbios_c/config/suffix.h \
                src/include/smbios_c/config/auto_link.h \
                src/include/smbios_c/config/select_platform_config.h \
                src/include/smbios_c/config/abi_suffix.h \
                src/include/smbios_c/config/user.h \
                src/include/smbios_c/config/select_compiler_config.h \
                src/include/smbios_c/config/abi_prefix.h \
                src/include/smbios_c/config/get_config.h

smbios_c_abidir = $(includedir)/smbios_c/config/abi
smbios_c_abi_HEADERS = \
                src/include/smbios_c/config/abi/msvc_prefix.h \
                src/include/smbios_c/config/abi/msvc_suffix.h

smbios_c_platformdir = $(includedir)/smbios_c/config/platform
smbios_c_platform_HEADERS = \
                src/include/smbios_c/config/platform/win64.h \
                src/include/smbios_c/config/platform/win32.h \
                src/include/smbios_c/config/platform/linux.h

smbios_c_compilerdir = $(includedir)/smbios_c/config/compiler
smbios_c_compiler_HEADERS = \
                src/include/smbios_c/config/compiler/sunpro_cc.h \
                src/include/smbios_c/config/compiler/visualc.h \
                src/include/smbios_c/config/compiler/gcc.h

smbios_c_objdir = $(includedir)/smbios_c/obj
smbios_c_obj_HEADERS = \
                src/include/smbios_c/obj/cmos.h \
                src/include/smbios_c/obj/memory.h \
                src/include/smbios_c/obj/smbios.h \
                src/include/smbios_c/obj/token.h \
                src/include/smbios_c/obj/smi.h
